fix: update code for Java 8 compatibility